Closed Bug 560447 Opened 15 years ago Closed 15 years ago

"ASSERTION: setting NEEDS_FRAME on a node that already has a frame?" with image map

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: tnikkel)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file testcase
###!!! ASSERTION: setting NEEDS_FRAME on a node that already has a frame?: '!child->GetPrimaryFrame()', file /Users/jruderman/mozilla-central/layout/base/nsCSSFrameConstructor.cpp, line 6213 ###!!! ASSERTION: NEEDS_FRAME set on a node that already has a frame?: '!child->GetPrimaryFrame()', file /Users/jruderman/mozilla-central/layout/base/nsCSSFrameConstructor.cpp, line 6271
Attached patch patchSplinter Review
The mutation observer for the image map will set the primary frame to the image before the frame constructor gets the mutation notifications. So we need to add the those ugly area checks to some assertions. Even though the area's will have a primary frame, we want them to go through frame construction like they did before.
Assignee: nobody → tnikkel
Attachment #440678 - Flags: review?(bzbarsky)
Comment on attachment 440678 [details] [diff] [review] patch r=bzbarsky. I hate <area>
Attachment #440678 - Flags: review?(bzbarsky) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: