Bug 560447. Quiet lazy frame construction assertions for area's because they misbehave. r=bzbarsky